styles/styles.css
/* ... */
/*
  ========================================================================================
  HOMEPAGE styles start
  ========================================================================================
*/

:root {
  --all-black: #000000;
  --primary-black: #222222;
  --primary-neon-green: #c7fe46;
  --primary-neon-blue: #3edfd4;
  --primary-medium-blue: #2723ff;
  --primary-white: #ffffff;
  --title-stroke-width: 0.2rem;
  --title-stroke-width-neg: -0.2rem;
  --banner-desktop-height: 600px;
  --nav-desktop-height: 60px;
}

.home-container h1 span {
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 700;
  font-style: italic;
  text-transform: uppercase;
  font-size: calc(3rem + 5vw);
  line-height: calc(3rem + 3vw);
  color: var(--primary-neon-green);
  padding-left: 0.8rem;
}

.title-black-box {
  padding-top: 2vw;
  background-color: var(--primary-black);
}

.home-container h1 .title-whistler {
  padding-left: 1.4rem;
  font-family: 'Climate Crisis', serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: 'YEAR' 2000;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: var(--primary-black);
  font-size: calc(2rem + 5vw);
  line-height: calc(1rem + 3vw);
}

.home-container .title-festival {
  padding-left: 1.2rem;
  font-family: 'Climate Crisis', serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: 'YEAR' 2000;
  text-transform: uppercase;
  color: var(--primary-black);
  text-shadow: var(--title-stroke-width-neg) var(--title-stroke-width-neg) 0
      var(--primary-neon-green),
    var(--title-stroke-width) var(--title-stroke-width-neg) 0
      var(--primary-neon-green),
    var(--title-stroke-width-neg) var(--title-stroke-width) 0
      var(--primary-neon-green),
    var(--title-stroke-width) var(--title-stroke-width) 0
      var(--primary-neon-green);
  font-size: calc(1rem + 1vw);
  line-height: calc(3rem + 2vw);
  letter-spacing: 0.3rem;
}

.home-container h1 span {
  display: block;
}

.highlight-outline {
  font-family: 'Climate Crisis', serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: 'YEAR' 2000;
  text-transform: uppercase;
  text-shadow: var(--title-stroke-width-neg) var(--title-stroke-width-neg) 0
      var(--primary-black),
    var(--title-stroke-width) var(--title-stroke-width-neg) 0
      var(--primary-black),
    var(--title-stroke-width-neg) var(--title-stroke-width) 0
      var(--primary-black),
    var(--title-stroke-width) var(--title-stroke-width) 0 var(--primary-black);
  font-size: 2rem;
  letter-spacing: 0.3rem;
}

.home-container button a {
  text-decoration: none;
  color: var(--primary-white);
}

/****************** HOMEPAGE nav ******************/

.home-header {
  z-index: 10;
  position: absolute;
  width: 100%;
  top: 0;
}

.home-header .nav-bar {
  background-color: var(--primary-black);
  position: fixed;
  width: 100vw;
}

.home-header h1 {
  grid-area: logo;
  padding-left: 0px;
  margin-left: 0px;
}

.home-header p,
.home-header a {
  font-family: 'Barlow', sans-serif;
  font-weight: 700;
  font-style: bold;
  text-transform: uppercase;
}

.home-container h1,
.home-container h2,
.home-container h3,
.home-container h4,
.home-container h5,
.home-container p {
  margin: 0;
  padding: 0;
}

/****************** HOMEPAGE header ******************/

.home-header {
  padding: 0;
}

.home-header .nav-bar {
  padding: 0rem 1.25rem;
}

.home-header .logo {
  height: 60px;
  width: 60px;
  margin: 0.8rem 0;
}

.home-header header p {
  grid-area: logo;
  padding-left: 0px;
  margin-left: 0px;
}

.unselectable {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/****************** HOMEPAGE sections ******************/

.index-section-info {
  background-color: var(--primary-neon-blue);
  border-bottom: 15px solid var(--all-black);
  /* grid-template-rows: auto; */
}

.index-section-about {
  background-color: var(--primary-neon-green);
  display: grid;
  grid-template-columns: 1fr;
  grid-column: span 3;
  justify-self: stretch;
}

.index-section-activities {
  background-color: var(--primary-black);
  display: grid;
  grid-template-columns: 1fr;
}

.index-section-team {
  background-color: var(--primary-medium-blue);
  color: var(--primary-white);

  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  column-gap: 1rem;
}

.home-container .index-section-about h2 {
  width: 100%;
  text-align: center;
}

.home-container .index-section-activities h2 {
  text-align: center;
  text-transform: uppercase;
  color: var(--primary-neon-green);
}

.index-section-activities article img {
  width: 100%;
}

.home-container .index-section-team h2 {
  width: 100%;
  text-align: center;
  text-transform: uppercase;
  color: white;
}

.index-section-info,
.index-section-about,
.index-section-activities,
.index-section-team {
  padding: 2rem 2rem;
}

.index-section-info span,
.index-section-about span {
  display: block;
  padding-bottom: 1rem;
}

.index-section-info h2,
.index-section-about h2,
.index-section-activities h2,
.index-section-team h2 {
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 700;
  font-size: 3rem;
  line-height: 3rem;
  color: var(--primary-black);
  grid-row: 1;
}

.index-section-info h2,
.index-section-info p {
  grid-column: span 3;
}

.index-section-activities h3 {
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 500;
  font-size: 2rem;
  line-height: 2rem;
  color: var(--primary-white);
  margin: 0.5rem 0;
}

.about-anchor {
  display: block;
  width: 50px;
  height: 50px;
  margin: -8rem;
}

.index-section-info > * {
  display: block;
}
/* ... */

